# biopytk

./: README.md  geneticConst.py  main.py  pyproject.toml
.github/workflows/: python-publish.yml
src/biopy_chephen/: dnaToolkit.py  main.py  sequenceBuilder.py
src/biopytk/: .gitignore  aa_seq.py  bio_seq.py  dnaToolkit.py  fasta_tk.py  geneticConst.py  main.py  sequenceBuilder.py  test.py
