[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biopytk"
version = "0.0.1"
authors = [
  { name="Stephen Cheney", email="scheney.cb@gmail.com" },
]
description = "Personal Toolkit for Bioinformatics and Computational Biology pipelines. (WIP)"
readme = "README.md"
requires-python = ">=3.11.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Steve-Cheney/biopytk"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default